Overflow y scroll added to html to stop repositioning when page is loading

--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -7,6 +7,7 @@
 html {
     background-color: #222;
     color: white;
+    overflow-y: scroll;
 }
 
 .page-buttons {
